# PalBreedingCal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  release.yml  windows.yml
code/: CMakeLists.txt  main.cpp
code/inc/: BreedingListView.h  BreedingView.h  PalManager.h  PalModel.h  PlayerPalModel.h  mainwindow.h
code/models/: CMakeLists.txt
code/models/inc/: BreedingModel.h  DisplayPalManager.h  DisplayPalModel.h  PalDef.h  PalManager.h  PalModel.h  PlayerListModel.h  PlayerManager.h  PlayerModel.h  PlayerPalModel.h
code/models/src/: BreedingModel.cpp  DisplayPalManager.cpp  DisplayPalModel.cpp  PalManager.cpp  PalModel.cpp  PlayerListModel.cpp  PlayerManager.cpp  PlayerModel.cpp  PlayerPalModel.cpp
code/resources/: resource.qrc
code/resources/db/: db.json
code/src/: BreedingListView.cpp  BreedingModel.cpp  BreedingView.cpp  PalManager.cpp  PlayerListModel.cpp  PlayerModel.cpp  mainwindow.cpp
code/tests/: CMakeLists.txt
code/tests/src/: test_BreedingModel.cpp  test_DisplayPalManager.cpp  test_DisplayPalModel.cpp  test_PlayerManager.cpp  test_PlayerModel.cpp  test_PlayerPalModel.cpp  test_displayPalModel.cpp
code/ui/: mainwindow.ui
code/view/: CMakeLists.txt
code/view/inc/: BreedingListView.h  BreedingView.h  PlayerView.h  mainwindow.h  playermanagerview.h
code/view/src/: BreedingListView.cpp  BreedingView.cpp  PlayerView.cpp  mainwindow.cpp  playermanagerview.cpp
code/view/ui/: mainwindow.ui  playermanagerview.ui
